--- a/.github/workflows/AutoFinishUserinIssue.yml
+++ b/.github/workflows/AutoFinishUserinIssue.yml
@@ -23,4 +23,5 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a set of commands using the runners shell
-      - run: echo google-chrome --version
+      - name: setup chromedriver
+        uses: nanasess/setup-chromedriver@v1.0.1
